--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "form-data": "^4.0.1",
     "formidable": "^3.5.1",
+    "http-proxy-middleware": "^3.0.3",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "node-fetch": "^2.7.0",
