--- a/package.json
+++ b/package.json
@@ -14,21 +14,15 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "form-data": "^4.0.1",
-    "formidable": "^3.5.1",
-    "http-proxy-middleware": "^3.0.3",
     "lucide-react": "^0.451.0",
-    "next": "14.2.15",
-    "node-fetch": "^2.7.0",
+    "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
-    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
