--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pdfjs-dist": "^4.7.76",
     "react": "^18.3.1",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
     "tailwind-merge": "^2.5.3",
